add Todo o conteudo

--- a/pages/contracoes-uterinas-durante-o-parto.html
+++ b/pages/contracoes-uterinas-durante-o-parto.html
@@ -36,9 +36,51 @@
         <section>
             <article class="conteudo">
                 <h1>Contrações Uterinas Durante o Parto</h1>
-                <p>
-                    orem ipsum, dolor sit amet consectetur adipisicing elit. Architecto adipisci temporibus magni similique dicta eum molestiae quos, a molestias delectus magnam neque nam labore ex debitis vel ullam, totam non. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio accusantium odio, officiis, reiciendis accusamus velit nam atque est nesciunt doloribus assumenda? Alias quo amet eaque aut quidem optio soluta nam! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis necessitatibus, officia deleniti magni adipisci quod at recusandae sapiente eaque amet porro laborum provident doloremque ad cumque quisquam. Ducimus, esse cum.
-                </p>
+                <p>As contrações uterinas são respostas das mudança no colo do útero, que se prepara para o nascimento do bebê, provocadas pelo estiramento do músculo e por estímulos hormonais.</p>
+
+                <p>Essas contrações durante o início do trabalho de parto geralmente começam entre a 37ª a 42ª semana de gestação se iniciando de forma leve e espaçadas se intensificando ao passar do tempo.</p>
+
+                <p>Um dos sinais mais comuns que indicam que o trabalho de parto está iniciando são:</p>
+
+                <p>• Endurecimento no fundo da barriga</p>
+                <p>• Sensação de pontadas na vagina</p>
+                <p>•Dor irradiada na lombar, ossos do púbis e até mesmo na parte interna das coxas.</p>
+
+                <p>Porém, o trabalho de parto se inicia de fato quando as contrações se intensificam e começam a possuir a duração de 30 segundos com uma frequência de 2 a 3 contrações a cada 10 minutos ou quando acontece a ruptura da bolsa amniótica e escorre o líquido de cor clara com cheiro característico que pode ser pouco ou bastante.</p>
+
+                <p>Durante o parto as principais funções da contratilidade uterina é:</p>
+
+                <p>• Realizar a dilatação cervical, que faz com que o corpo fique mais curto e mais espesso e o colo uterino mais dilatado;</p>
+
+                <p>• Descida e expulsão do feto, onde durante essa fase os marca-passos uterinos são responsáveis por gerar os puxões maternos que são importante no processo de expulsão do bebê;</p>
+
+                <p>• Descolamento da placenta, pois após a expulsão do feto, a grande retração do corpo uterino, promovendo a desinserção placentárias do seu sítio e a sua expulsão;</p>
+
+                <p>• Hemóstase puerperal, responsáveis pela prevenção de hemorragias e também pela eliminação de coágulos e lóquios (sangramento após o parto) do interior do útero.</p>
+
+                <p>Para saber se os sinais que se sentem são realmente contrações de parto e para poder diferenciá-los do falso trabalho de parto, é necessário conhecer algumas características específicas.</p>
+
+                <p>• A regularidade: As contrações de parto devem ser regulares em frequência e em intensidade. É necessário um ritmo e intervalo constantes para poder identificar que o processo de parto está começando. É necessário assegurar-se de que a regularidade dos intervalos seja de no mínimo uma hora.</p>
+
+                <p>• A duração: Cada contração deve durar um minuto desde o início até que desapareça.</p>
+
+                <p>• A percepção: Todas as contrações são sentidas de uma maneira ou outra pelas parturientes. A dor não é um sinal determinante já que é um fator subjetivo.</p>
+
+                <p>Se caso você tenha contrações de parto, deve:</p>
+
+                <p>• Primeiramente, mantenha a calma.</p>
+
+                <p>• Controle as características das contrações com um relógio.</p>
+
+                <p>• Se os movimentos fetais são sentidos, é um sinal de que você deve se tranquilizar.</p>
+
+                <p>• Avise um familiar para que a acompanhe à maternidade.</p>
+
+                <p>• Pegue as roupinhas do bebê, fraldas, a sua mala, enfim, tudo o que foi preparado para levar à maternidade. E é importante também levar os últimos exames e a documentação de identificação e do plano de saúde.</p>
+
+                <p>• Vá à maternidade onde decidiu ser atendida.</p>
+
+                <p>Melhor Com Saúde Revista sobre bons hábitos e cuidados para a sua saúde 2022. Disponível em: <a rel="external" target="_blank" href="https://melhorcomsaude.com.br/como-sao-as-contracoes-do-parto/">https://melhorcomsaude.com.br/como-sao-as-contracoes-do-parto/</a>. Acesso em: 24 out. 2022</p>
             </article>
         </section>
 
