Correcao na tela de about us

--- a/pages/sobre-nos.html
+++ b/pages/sobre-nos.html
@@ -39,6 +39,7 @@
                 <div class="pessoa" >
                     <img src="../assets/pessoas/p1.jpeg" alt="Foto Myllene">
                     <h1>Myllene Meneses de Melo</h1>
+                    <p>Acadêmica de Enfermagem na Christus Faculdade do Piauí - Chrisfapi</p>
                 </div>
                 <div class="pessoa" >
                     <img src="../assets/pessoas/p2.jpeg" alt="Foto Aliatrícia">
