--- a/index.html
+++ b/index.html
@@ -32,24 +32,36 @@
             <img id="cegonha" src="assets/Cegonha.png" alt="">
             <img id="hospital" src="assets/hospital.png" alt="">
             <nav id="caminho">
-                <a href="pages/periodo-premunitorio.html">
-                    <img  id="caminho1" src="assets/caminhos/1.png" alt="caminho">
-                </a>
-                <a href="pages/tempos-mecanismo-do-parto.html">
-                    <img  id="caminho2" src="assets/caminhos/2.png" alt="caminho">
-                </a>
-                <a href="pages/contracoes-uterinas-durante-a-gestacaoo.html">
-                    <img  id="caminho3" src="assets/caminhos/3.png" alt="caminho">
-                </a>
-                <a href="pages/contracoes-uterinas-durante-o-parto.html">
-                    <img  id="caminho4" src="assets/caminhos/4.png" alt="caminho">
-                </a>
-                <a href="pages/modificacoes-fisiologicas-na-mulher.html">
-                    <img  id="caminho5" src="assets/caminhos/5.png" alt="caminho">
-                </a>
-                <a href="pages/duvidas-frequentes.html">
-                    <img  id="caminho6" src="assets/caminhos/6.png" alt="caminho">
-                </a>
+                <abbr title="Período Premunitório">
+                    <a href="pages/periodo-premunitorio.html">
+                        <img  id="caminho1" src="assets/caminhos/1.png" alt="caminho">
+                    </a>
+                </abbr>
+                <abbr title="Tempos-Mecanismo do Parto">
+                    <a href="pages/tempos-mecanismo-do-parto.html">
+                        <img  id="caminho2" src="assets/caminhos/2.png" alt="caminho">
+                    </a>
+                </abbr>
+                <abbr title="Contrações Uterinas Durante a Gestação">
+                    <a href="pages/contracoes-uterinas-durante-a-gestacaoo.html">
+                        <img  id="caminho3" src="assets/caminhos/3.png" alt="caminho">
+                    </a>
+                </abbr>
+                <abbr title="Contrações Uterinas Durante o Parto">
+                    <a href="pages/contracoes-uterinas-durante-o-parto.html">
+                        <img  id="caminho4" src="assets/caminhos/4.png" alt="caminho">
+                    </a>
+                </abbr>
+                <abbr title="Modificações Fisiológicas na Mulher">
+                    <a href="pages/modificacoes-fisiologicas-na-mulher.html">
+                        <img  id="caminho5" src="assets/caminhos/5.png" alt="caminho">
+                    </a>
+                </abbr>
+                <abbr title="Dúvidas Frequentes">
+                    <a href="pages/duvidas-frequentes.html">
+                        <img  id="caminho6" src="assets/caminhos/6.png" alt="caminho">
+                    </a>
+                </abbr>
             </nav>
             <img id="bb1" src="assets/bb1.png" alt="">
             <img id="bb2" src="assets/bb2.png" alt="">
