Add mais uma pessoa no about us

--- a/pages/sobre-nos.html
+++ b/pages/sobre-nos.html
@@ -39,32 +39,37 @@
                 <div class="pessoa" >
                     <img src="../assets/pessoas/p1.jpeg" alt="Foto Myllene">
                     <h1>Myllene Meneses de Melo</h1>
-                    <p>Acadêmica de Enfermagem na Christus Faculdade do Piauí - Chrisfapi</p>
+                    <p>Acadêmica de Enfermagem da Christus Faculdade do Piauí - Chrisfapi</p>
                 </div>
                 <div class="pessoa" >
                     <img src="../assets/pessoas/p2.jpeg" alt="Foto Aliatrícia">
                     <h1>Aliatrícia Silva Pedrosa</h1>
-                    <p>Acadêmica de Enfermagem na Christus Faculdade do Piauí - Chrisfapi</p>
+                    <p>Acadêmica de Enfermagem da Christus Faculdade do Piauí - Chrisfapi</p>
                 </div>
                 <div class="pessoa" >
                     <img src="../assets/pessoas/p3.jpeg" alt="Foto Maria Vitória">
                     <h1>Maria Vitória do Nascimento Santos</h1>
-                    <p>Acadêmica de Enfermagem na Christus Faculdade do Piauí - Chrisfapi</p>
+                    <p>Acadêmica de Enfermagem da Christus Faculdade do Piauí - Chrisfapi</p>
                 </div>
                 <div class="pessoa" >
                     <img src="../assets/pessoas/p4.jpeg" alt="Foto Maria Paula">
                     <h1>Maria Paula Brito de Souza</h1>
-                    <p>Acadêmica de Enfermagem na Christus Faculdade do Piauí - Chrisfapi</p>
+                    <p>Acadêmica de Enfermagem da Christus Faculdade do Piauí - Chrisfapi</p>
                 </div>
                 <div class="pessoa" >
                     <img src="../assets/pessoas/p5.jpeg" alt="Foto Maria Laysa">
                     <h1>Maria Laysa Oliveira dos Santos</h1>
-                    <p>Acadêmica de Enfermagem na Christus Faculdade do Piauí - Chrisfapi</p>
+                    <p>Acadêmica de Enfermagem da Christus Faculdade do Piauí - Chrisfapi</p>
                 </div>
                 <div class="pessoa" >
                     <img src="../assets/pessoas/p6.jpeg" alt="Foto Ruane">
                     <h1>Antonia Ruane Lima da Silva Coelho</h1>
-                    <p>Acadêmica de Enfermagem na Christus Faculdade do Piauí - Chrisfapi</p>
+                    <p>Acadêmica de Enfermagem da Christus Faculdade do Piauí - Chrisfapi</p>
+                </div>
+                <div class="pessoa" >
+                    <img src="../assets/pessoas/p7.jpeg" alt="Foto Ruane">
+                    <h1>Allexandre Meneses de Melo</h1>
+                    <p>Acadêmico de Ciências da Computação da Universidade Estadual do Piauí - UESPI</p>
                 </div>
             </article>
         </section>
