add Link secreto

--- a/pages/sobre-nos.html
+++ b/pages/sobre-nos.html
@@ -67,8 +67,8 @@
                     <p>Acadêmica de Enfermagem da Christus Faculdade do Piauí - Chrisfapi</p>
                 </div>
                 <div class="pessoa" >
-                    <img src="../assets/pessoas/p7.jpeg" alt="Foto Ruane">
-                    <h1>Allexandre Meneses de Melo</h1>
+                    <a href="https://www.instagram.com/xandynhoteclass/"><img src="../assets/pessoas/p7.jpeg" alt="Foto Allexandre"></a>
+                    <h1><a href="https://github.com/Allexandre-Meneses">Allexandre Meneses de Melo</a></h1>
                     <p>Acadêmico de Ciências da Computação da Universidade Estadual do Piauí - UESPI</p>
                 </div>
             </article>
