Correcao no conteudo

--- a/pages/contracoes-uterinas-durante-a-gestacaoo.html
+++ b/pages/contracoes-uterinas-durante-a-gestacaoo.html
@@ -103,7 +103,7 @@
                 </h3>
                 <p>
                     MOREIRA, Fernando. Contrações de Treinamento (ou Braxton Hicks). Fetalmednet, 2014. Disponível em: <a rel="external" target="_blank" href="https://www.fetalmed.net/contracoes-de-braxton-hicks/"> https://www.fetalmed.net/contracoes-de-braxton-hicks/</a> . Acesso em: 29 de Outubro de 2022. 
-                    REZENDE, J. Obstetrícia. 11ª ed. Rio de Janeiro: Guanabara Koogan, 2008.
+                    <p>REZENDE, J. Obstetrícia. 11ª ed. Rio de Janeiro: Guanabara Koogan, 2008.</p>
                 </p>
             </article>
         </section>
