--- a/pages/periodo-premunitorio.html
+++ b/pages/periodo-premunitorio.html
@@ -56,7 +56,7 @@
                 <p>• Por isso, o tampão saindo antes do tempo não deve ser motivo para preocupações. No entanto, sempre é importante informar o obstetra que está acompanhando a gravidez, para que possa ser avaliado se existe algum risco para a gestação.</p>
 
                 <br>
-            <h3>REFERENCIA </h3>
+            <h3>REFERÊNCIA </h3>
 
             <p>REIS, Manuel. Tampão mucoso: o que é e como saber se já saiu. Tua Saúde, 2022. Disponível em: <a rel="external" target="_blank" href="https://www.tuasaude.com/como-identificar-o-tampao-mucoso/">https://www.tuasaude.com/como-identificar-o-tampao-mucoso/</a> Acesso em: 22 out. 2022.</p>
             </article>
