--- a/pages/sobre-nos.html
+++ b/pages/sobre-nos.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="pessoa" >
                     <img src="../assets/pessoas/p4.jpeg" alt="Foto Maria Paula">
-                    <h1>Maria Paula Brito de Souza</h1>
+                    <h1>Maria Paula Brito de Sousa</h1>
                     <p>Acadêmica de Enfermagem da Christus Faculdade do Piauí - Chrisfapi</p>
                 </div>
                 <div class="pessoa" >
